# Garden_of_Eden_V3

./: .env.example  .eslintrc.js  .gitignore  ADAM_EVE_IMPLEMENTATION.md  ADVANCED_FEATURES.md  API.md  ASSETS_GUIDE.md  BGE_M3_INTEGRATION.md  BUILDING.md  BUILD_AND_DEPLOY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CURRENT_WORK_SESSION.md  DEBUGGING_NOTES.md  DEVELOPMENT_PLAN_V3.5-V3.7.md  DISTRIBUTION.md  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES.md  LANCEDB_INTEGRATION.md  LANDING.md  MANUAL_TEST_CHECKLIST.md  OVERFITTING_PREVENTION.md  PHASE5_COMPLETE.md  PHASE_PROGRESS.md  PLANNING_v3.7.0.md  PRODUCTION_ISSUES.md  PROGRESS.md  PROJECT_EDEN_V3_MASTER_SPEC.md  QUICKSTART.md  RAG_OPTIMIZATION_GUIDE.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_V3.4.0.md  SERVICE_OVERVIEW.md  TESTING.md  TESTING_GUIDE.md  TESTING_GUIDE_V3.4.0.md  TESTING_v3.6.0.md  (+19 more)
.github/: release-notes.md
.github/workflows/: build-all-platforms.yml  build-windows.yml  release.yml
docs/: AUTO_UPDATER_GUIDE.md  CLAUDE.md  DEVELOPMENT_PLAN_V3.4-V3.8.md  FINETUNING_GUIDE.md  RAFT_INTEGRATION.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md  V3.3.0_FINAL_AUDIT_REPORT.md  V3.3.1_HOTFIX_PLAN.md  V3.7.0_API_REFERENCE.md  V3.7.0_QUICKSTART.md  V3.7.0_USER_GUIDE.md  V3.8.0_PHASE3_TEMPORAL_MEMORY.md  V3.8.0_PHASE4_ADVANCED_FEATURES.md  WINDOWS_DEVELOPMENT.md
docs/archive/: V3.7.0_INTEGRATION_SUMMARY.md  V3.8.0_PHASE1_LAM_INTEGRATION.md
docs/deployment/: RELEASE_PROCESS.md  RELEASE_WORKFLOW.md
docs/guides/: CRASH_REPORTING_GUIDE.md  LORA_FINE_TUNING_GUIDE.md
docs/phases/: V3.8.0_PHASE2_STREAMING_VISION.md  V3.8.0_PHASE3_TEMPORAL_MEMORY.md
docs/releases/: v3.4.0.md  v3.7.0.md
plugins/calculator-plugin/: index.js  manifest.json
plugins/weather-plugin/: index.js  manifest.json
program/: DEBUGGING_NOTES.md  README.md
program/checksums/: SHA256SUMS.txt
program/macOS/: latest-mac.yml
resources/: entitlements.mac.plist
resources/icons/: ICON_GUIDE.md  icon.icns
resources/models/: Modelfile.qwen  README.md
scripts/: benchmark-llm.js  benchmark-llm.sh  create-github-release.sh  download-models.js  generate-checksums.sh  generate-icons.js  generate-placeholder-icon.js  generate-update-manifest.js  install-ollama.sh  prepare-release.sh  test-llama.js  upload-release-assets.sh
src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  attention_sink.rs  audio.rs  calendar.rs  chain_of_thought.rs  cloud_sync.rs  computer_control.rs  context_enricher.rs  contextual_retrieval.rs  conversation.rs  conversation_memory.rs  crash_reporter.rs  episodic_memory.rs  file.rs  git.rs  goal_tracker.rs  graphrag.rs  hybrid_search.rs  learning.rs  learning_style.rs  llm.rs  lora.rs  memory_consolidation.rs  memory_enhancer.rs  mod.rs  onboarding.rs  pattern_detection.rs  planner.rs  plugin.rs  proactive.rs  prompt_cache.rs  raft.rs  react.rs  screen.rs  semantic_wiki.rs  settings.rs  streaming_vision.rs  system.rs  task_planner.rs  temporal_memory.rs  (+5 more)
src-tauri/src/database/: mod.rs  models.rs  schema.rs  tests.rs
src-tauri/src/services/: active_window.rs  attention_sink.rs  bm25.rs  calendar.rs  chain_of_thought.rs  cloud_sync.rs  computer_control.rs  computer_control_tests.rs  context_enricher.rs  contextual_retrieval.rs  conversation_memory.rs  crash_reporter.rs  decay_worker.rs  embedding.rs  entity_extractor.rs  file.rs  git.rs  goal_tracker.rs  graph_builder.rs  graph_retrieval.rs  graph_storage.rs  hybrid_search.rs  lam_tools.rs  learning.rs  learning.rs.backup  learning_style_adapter.rs  lifecycle.rs  llava.rs  lora_adapter_manager.rs  lora_data_collector.rs  memory_consolidation.rs  memory_enhancer.rs  memory_pressure.rs  mod.rs  model_installer.rs  model_recommender.rs  ollama.rs  pattern_detector.rs  persona_adjuster.rs  personality_detector.rs  (+33 more)
src-tauri/tests/integration/: v3_7_0_tests.rs
src/main/: index.ts  window.ts
src/main/config/: models.config.ts
src/main/database/: index.ts  schema.ts
src/main/ipc/: ai.handler.ts  calendar.handler.ts  context.handler.ts  conversation.handler.ts  download.handler.ts  feedback.handler.ts  file.handler.ts  git.handler.ts  memory.handler.ts  message.handler.ts  screen.handler.ts  settings.handler.ts  system.handler.ts  webhook.handler.ts  workspace.handler.ts
src/main/utils/: logger.ts
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts  index.html  main.tsx
src/renderer/components/: CrashReportDialog.tsx  DynamicIsland.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FirstMessageCelebration.tsx  LoadingDots.tsx  ModeIndicator.tsx  PersonaParameterGroup.tsx  PersonaPreviewModal.tsx  PersonaPreviewPanel.tsx  ProactiveNotification.tsx  README_V3.7.0.md  ShortcutHelp.tsx  SuggestedPromptCard.tsx  SuggestionsPanel.tsx  ToastContainer.tsx  UpdateNotification.tsx  VoiceVisualizer.tsx
src/renderer/config/: oauth.ts
src/renderer/hooks/: index.ts  useChatHandlers.ts  useChatState.ts  useKeyboardShortcuts.ts  useNavigation.tsx  usePerformance.ts  useSmoothScroll.ts
src/renderer/i18n/: config.ts
src/renderer/lib/: tauri-api.ts  utils.ts
src/renderer/pages/: Account.tsx  Chat.tsx  Integrations.tsx  MemoryVisualization.tsx  Onboarding.tsx  PersonaSettings.tsx  Settings.tsx  SmartOnboarding.tsx
src/renderer/services/: cloudSync.ts
src/renderer/stores/: authStore.ts  toast.store.ts
src/renderer/styles/: globals.css
src/shared/constants/: index.ts
src/shared/types/: ai.types.ts  calendar.types.ts  chat.types.ts  conversation.types.ts  error.types.ts  feedback.types.ts  ipc.types.ts  memory.types.ts  onboarding.types.ts  persona-groups.types.ts  persona.types.ts  toast.types.ts  tool-history.types.ts  tool-settings.types.ts  tool.types.ts  user-profile.types.ts  (+3 more)
tests/: setup-renderer.ts  setup.ts  test-tool-calling.js
tests/benchmark/: llm-speed.test.ts
wiki/: Cloud-Backup.md  FAQ.md  Home.md  Installation-Guide.md  Persona-Customization.md  Quick-Start.md  README.md
(+124 files in other folders)
