[package]
name = "garden-of-eden-v3"
version = "1.0.0"
description = "100% Local AI Assistant - Privacy-first desktop companion inspired by JARVIS"
authors = ["Garden of Eden Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
sys-info = "0.9"
sysinfo = "0.33"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
screenshots = "0.8"
base64 = "0.22"
# Audio/Speech dependencies
cpal = "0.15"           # Cross-platform audio I/O
hound = "3.5"           # WAV file handling
tts = "0.26"            # Text-to-speech

# RAG & Vector DB dependencies (Phase 1)
# lancedb = "0.11"        # Vector database (temporarily disabled - dependency conflict)
# ort = "2.0.0-rc.10"     # ONNX Runtime for BGE-M3 embeddings
# tokenizers = "0.15"     # Tokenization for embedding model
# ndarray = "0.16"        # N-dimensional arrays for ML
# TODO: Re-enable once arrow-arith dependency conflict is resolved
# For now, using SQLite-only RAG with keyword matching

# Voice Activity Detection (Phase 3)
webrtc-vad = "0.4"      # Voice activity detection

# Proactive Mode dependencies (Phase 4)
notify = "6.1"          # File system watching
regex = "1.10"          # Pattern matching for trigger detection
uuid = { version = "1.18.1", features = ["v4"] }

# Calendar Integration dependencies (Phase 6)
oauth2 = "4.4"          # OAuth 2.0 client
url = "2.5"             # URL parsing
open = "5.0"            # Open browser for OAuth

# Active window detection (Phase 2)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"          # macOS NSWorkspace API
objc = "0.2"            # Objective-C runtime

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
# By default, Tauri runs in production mode when `tauri build` is run
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
