[package]
name = "garden-of-eden-v3"
version = "3.4.0"
description = "100% Local AI Assistant - Privacy-first desktop companion inspired by JARVIS"
authors = ["Garden of Eden Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "garden_of_eden_v3"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
sys-info = "0.9"
sysinfo = "0.33"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
screenshots = "0.8"
base64 = "0.22"
# RAG & Vector DB dependencies (Phase 1) - PRODUCTION LEVEL
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "ndarray"] }  # ONNX Runtime for BGE-M3 (CPU fallback for all platforms)
tokenizers = "0.15"     # Tokenization for embedding model
ndarray = "0.16"        # N-dimensional arrays for ML
# LanceDB postponed - API changed significantly in 0.22, complex migration
# Using SQLite with BGE-M3 embeddings (sufficient performance for v3.2.0)
# lancedb = "0.22"        # Vector database for fast similarity search
# arrow-array = "56"      # Apache Arrow arrays for LanceDB
# arrow-schema = "56"     # Apache Arrow schema for LanceDB

# Internet Access dependencies (v3.3.0)
urlencoding = "2.1"     # URL encoding for search queries
scraper = "0.22"        # HTML parsing and content extraction

# Plugin System dependencies (v3.4.0)
deno_core = "0.329"     # V8 JavaScript runtime for plugin execution
walkdir = "2.5"         # Directory traversal for plugin discovery

# Tool Calling System dependencies (v3.5.1)
async-trait = "0.1"     # Async trait support for ToolExecutor

# Hybrid Search dependencies (v3.6.0)
unicode-segmentation = "1.12"  # Text tokenization for BM25
sha2 = "0.10"  # SHA-256 hashing for prompt cache

# LanceDB Vector Database (v3.4.0 - Phase 6)
lancedb = "0.22"        # Vector database for fast similarity search
arrow-array = "56"      # Apache Arrow arrays for LanceDB
arrow-schema = "56"     # Apache Arrow schema for LanceDB
futures = "0.3"         # Async utilities for LanceDB

# Proactive Mode dependencies (Phase 4)
notify = "6.1"          # File system watching
regex = "1.10"          # Pattern matching for trigger detection
uuid = { version = "1.18.1", features = ["v4"] }

# Calendar Integration dependencies (Phase 6)
oauth2 = "4.4"          # OAuth 2.0 client
url = "2.5"             # URL parsing
open = "5.0"            # Open browser for OAuth

# Phase 2: Git Integration & Auto-updater
git2 = "0.19"           # Git operations (status, diff, commit, push)
tauri-plugin-updater = "2"  # Auto-updater for Tauri 2.x
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow"] }  # Crash reporting
tempfile = "3.23.0"

# LAM (Large Action Model) dependencies (v3.8.0)
enigo = "0.2"           # Cross-platform mouse/keyboard simulation
rdev = "0.5"            # Event listening for keyboard/mouse
image = "0.24"          # Image processing for vision-guided clicks
imageproc = "0.23"      # Template matching and image analysis

# Active window detection (Phase 2)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"          # macOS NSWorkspace API
objc = "0.2"            # Objective-C runtime
accessibility = "0.2"   # macOS Accessibility API for LAM

# CoreML GPU acceleration (Apple Silicon only - M1/M2/M3 Max)
[target.'cfg(target_vendor = "apple")'.dependencies.ort]
version = "2.0.0-rc.10"
features = ["download-binaries", "ndarray", "coreml"]  # CoreML for M1/M2/M3 Max GPU acceleration

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",                    # Screen capture
    "Win32_Graphics_Dwm",                    # Desktop Window Manager
    "Win32_System_Com",                      # COM for SAPI (TTS)
    "Win32_Media_Speech",                    # Windows TTS (SAPI)
    "Win32_System_Threading",                # Process management
    "Win32_UI_Shell",                        # Shell operations
] }

[features]
# By default, Tauri runs in production mode when `tauri build` is run
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
